# cell_type_mapper

./: README.md  pyproject.toml  requirements.txt  setup.py
cell_type_mapping/: aggregate_cell_clusters.py  map_to_clusters.py  requirements.txt
cell_type_mapping_corr/: README.md  aggregate_cell_clusters.py  map_to_clusters.py
cell_type_mapping_tree/: requirements.txt
cell_type_mapping_tree/data/: gene_id_lookup.json
cell_type_mapping_tree/tests/: conftest.py
deployment/data/: .gitignore
deployment/notebooks/: evaluate_deployment.ipynb
deployment/scratch/: create_csv_data.py
docs/: ingesting_new_taxonomies.md  mapping_cells.md  output.md
docs/algorithms/: hierarchical_mapping.md  marker_gene_selection.md  marker_gene_selection_v2.md
docs/data_files/: precomputed_stats_file.md
docs/input_data_files/: marker_gene_lookup.md  precomputed_stats_file.md  running_online_taxonomies_locally.md  taxonomy_tree.md
examples/: alternate_algorithm_demo.ipynb  cross_species_mapping.ipynb  downloading_taxonomy_files.ipynb  explore_mapping_results.ipynb  full_mapping_pipeline.ipynb  map_to_subset_of_taxonomy_fast.ipynb  mapping_cortex_taxonomy.ipynb  mapping_motor_cortex_taxonomy.ipynb  mapping_to_subset_of_abc_atlas_data.ipynb  precompute_stats_from_abc_release_data.py  run_sea_ad_hierarchical.py
garage/abc_230830/: create_mean_file.py  marker_cache.sh  run_assignment.py  validation.sh
garage/cookbook/: generate_marker_lookup.py
garage/fqs_poc/: correlate_cells.py  create_data.py  profile.py
garage/reference_markers_231107/: full_pipeline.py  p_value_mask.py  run_p_values.py  test_merging.py
garage/sfd_markers_230814/: ref_marker_utils.py
garage/siletti/: confidence_plots.py  confidence_plots_cdf.py  f1_plots.py  (+2 more)
src/: .gitignore
tests/: conftest.py
(+420 files in other folders)
