[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="cell_type_mapper"
version="1.6.0"
dependencies = [
    "anndata>=0.11.0",
    "argschema",
    "matplotlib",
    "marshmallow==3.12.2",
    "mmc_gene_mapper @ git+https://github.com/AllenInstitute/mmc_gene_mapper@v0.1.0",
    "numpy",
    "pytest",
    "pytest-xdist",
    "pyzmq<27.0.0",
    "scipy<1.15.0"
]
requires-python = ">=3.10"
authors = [
    {name = "Scott Daniel", email = "scott.daniel@alleninstitue.org"},
]
